# g2o

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  num.rs  slam3d.rs
src/solver/: base.rs  common.rs  mod.rs
src/solver/matrix/: base.rs  essential.rs  fundamental.rs  homography.rs  mod.rs
src/solver/pose/: base.rs  mod.rs  triangulate.rs
