[package]
name = "g2o"
version = "0.1.0"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
nalgebra = { version = "0.20", features = ["serde-serialize"] }
nalgebra-lapack = { version = "0.12", default-features = false, features = ["intel-mkl"] }
num-traits = "0.2"
rand = "0.7"
